manifests/php-k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
  selector:
    app: backend
  type: ClusterIP
